--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+
+
+  "engines": {
+    "node": ">=14 <15"
+  },
+
   "type": "module",
   "dependencies": {
     "bcrypt": "^5.1.0",
@@ -24,4 +30,6 @@
   "author": "",
   "license": "ISC",
   "description": ""
+
 }
+
